<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/edittext1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/text"
        android:imeOptions="flagNoExtractUi"
        android:inputType="text" />

    <EditText
        android:id="@+id/edittext2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/person_name"
        android:imeOptions="flagNoExtractUi"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/edittext3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone"
        android:imeOptions="flagNoExtractUi"
        android:inputType="phone" />

    <EditText
        android:id="@+id/edittext4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="autoHint"
        android:hint="@string/number"
        android:imeOptions="flagNoExtractUi"
        android:inputType="number" />

    <EditText
        android:id="@+id/edittext5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:imeOptions="flagNoExtractUi"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/edittext6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_address"
        android:imeOptions="flagNoExtractUi"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/edittext7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/datetime"
        android:imeOptions="flagNoExtractUi"
        android:inputType="datetime" />

    <EditText
        android:id="@+id/edittext8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/textlongmessage"
        android:imeOptions="flagNoExtractUi"
        android:inputType="textLongMessage" />

</LinearLayout>